fix dropdown alignment; makes it look right in todos

--- a/packages/accounts-ui/login_buttons.less
+++ b/packages/accounts-ui/login_buttons.less
@@ -229,8 +229,8 @@
   .box-shadow(0 3px 6px 1px rgba(0, 0, 0, 0.3));
   border-radius: 4px;
 
-  padding: 8px 16px;
-  margin: -10px 0 0 -16px;
+  padding: 8px 12px;
+  margin: -8px -12px 0 -12px;
 
   width: @login-buttons-accounts-dialog-width;
 
